feat: Add support for version range filtering in Tofu downloads
- Integrate semver-based range filtering to select Tofu releases.
- Enhance error handling for invalid version formats.
- Add logging to improve visibility of release selection logic.